[package]
name = "metadata"
edition = "2021"
version = "0.1.8"
authors = ["Zhiming Wang <i@zhimingwang.org>"]
description = "Media file metadata for human consumption"
documentation = "https://docs.rs/metadata"
homepage = "https://github.com/zmwangx/metadata#readme"
repository = "https://github.com/zmwangx/metadata"
readme = "README.md"
keywords = ["ffmpeg", "multimedia", "video", "audio"]
categories = ["command-line-utilities", "multimedia"]
license = "MIT"

[lib]
name = "metadata"
path = "src/lib.rs"

[features]
static = ["ffmpeg-next/static"]

[dependencies]
clap = "2.32.0"
digest = { version = "0.10", features = ["std"] }
env_logger = "0.10"
handlebars = "3.3.0"
lazy_static = "1.4"
libc = "0.2"
log = "0.4"
regex = "1.10"
serde = "1.0.114"
sha2 = "0.10"
serde_derive = "1"

[dependencies.ffmpeg-next]
version = "6.0.0"
default-features = false
features = ["codec", "format"]
git = "https://github.com/D3faIt/rust-ffmpeg.git"

[dev-dependencies]
quickcheck = "0.9.2"
tempfile = "3.0.3"
